@@ -63,11 +63,6 @@ public class MultiPatternSequenceEngine extends AbstractMultiPatternSequenceEngi
         setPatterns(patterns);
 
         try {
-            setNormalizeChords(!XMLUtils.parseBoolean(random, "obeyChordSubtype", node));
-            logger.warn("The tag \"obeyChordSubtype\" has been deprecated. Use \"normalizeChords\" with inverted value instead.");
-        } catch (Exception e) {}
-
-        try {
             setNormalizeChords(XMLUtils.parseBoolean(random, "normalizeChords", node));
         } catch (Exception e) {}
 
